[package]
name = "rust_interop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type =["staticlib"]


[dependencies]
dashmap = "5.3.4"
crossbeam-queue = "0.3.5"
lazy_static = "1.4.0"
once_cell = "1.12.0"
lockfree = "0.5.1"

[features]
cbindgen = []
